Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-843

Impalad's crash while running join on string column + union

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.3
    • Impala 1.3
    • None
    • None

    Description

      I only tried this on master, 542de067b97ee46e6293fcaa71d41bb52a377c83

      [localhost:21000] > select 1 FROM alltypes AS t1 JOIN alltypestiny AS t2 ON t1.string_col = t2.string_col UNION ALL SELECT 1 FROM tinytable AS t1;
      Query: select 1 FROM alltypes AS t1 JOIN alltypestiny AS t2 ON t1.string_col = t2.string_col UNION ALL SELECT 1 FROM tinytable AS t1
      +---+
      | 1 |
      +---+
      | 1 |
      ...
      | 1 |
      | 1 |
      | 1 |
      +---+
      Unknown Exception : [Errno 104] Connection reset by peer
      Not connected (use CONNECT to establish a connection)
      

      the imapalad log says

      F0227 12:52:07.617182 31903 disk-io-mgr.cc:319] Check failed: reader->num_buffers_in_reader_ == 0 (4 vs. 0) 
      
        Reader: 0x5c630e0 (state=Cancelled status_=Cancelled #ready_buffers=0 #used_buffers=0 #num_buffers_in_reader=4 #finished_scan_ranges=16 #disk_with_ranges=0 #disks=0
         0: is_on_queue=0 done=1 #num_remaining_scan_ranges=0 #in_flight_ranges=0 #unstarted_ranges=0 #reading_threads=0
         1: is_on_queue=0 done=1 #num_remaining_scan_ranges=0 #in_flight_ranges=0 #unstarted_ranges=0 #reading_threads=0)
      *** Check failure stack trace: ***
          @          0x1cf12cd  google::LogMessage::Fail()
          @          0x1cf3a6f  google::LogMessage::SendToLog()
          @          0x1cf0ebb  google::LogMessage::Flush()
          @          0x1cf42fd  google::LogMessageFatal::~LogMessageFatal()
          @           0xdfc7ee  impala::DiskIoMgr::UnregisterReader()
          @          0x11ba0ec  impala::HdfsScanNode::Close()
          @          0x119ff4e  impala::ExecNode::Close()
          @          0x122e894  impala::BlockingJoinNode::Close()
          @          0x11a7a1d  impala::HashJoinNode::Close()
          @          0x1231869  impala::MergeNode::GetNext()
          @          0x11828ab  impala::PlanFragmentExecutor::GetNextInternal()
          @          0x11812bb  impala::PlanFragmentExecutor::OpenInternal()
          @          0x1180fd2  impala::PlanFragmentExecutor::Open()
          @           0xeeb701  impala::ImpalaServer::FragmentExecState::Exec()
          @           0xe36577  impala::ImpalaServer::RunExecPlanFragment()
          @           0xe92081  boost::_mfi::mf1<>::operator()()
          @           0xe90665  boost::_bi::list2<>::operator()<>()
          @           0xe8c967  boost::_bi::bind_t<>::operator()()
          @           0xe86c9d  boost::detail::function::void_function_obj_invoker0<>::invoke()
          @           0xdcc89c  boost::function0<>::operator()()
          @           0xf940b8  impala::Thread::SuperviseThread()
          @           0xf9bc9e  boost::_bi::list4<>::operator()<>()
          @           0xf9bbe7  boost::_bi::bind_t<>::operator()()
          @           0xf9bb7a  boost::detail::thread_data<>::run()
          @     0x7f9469ccfce9  (unknown)
          @     0x7f9469aade9a  start_thread
          @     0x7f94679f63fd  (unknown)
      

      I've tried other variations, such as no union, no join, join on int type, and they all succeeded.

      Attachments

        Activity

          People

            mjacobs Matthew Jacobs
            caseyc casey
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: